documentation/2.2.0/manual/detailledTopics/production/ProductionConfiguration.md
<!-- translated -->
<!--
# Additional configuration
-->
# 追加設定

<!--
When running an application in production mode you can override any configuration. This section covers the more common use cases.
-->
アプリケーションを本番モードで実行するときに、任意の設定を上書きすることができます。このセクションでは、この「追加設定」のよくあるユースケースを紹介します。

<!--
All these additional configurations are specified using Java System properties and can be used directly if you are using one of the start scripts generated by Play.
-->
追加設定は Java のシステムプロパティを使って指定します。Play によって生成された起動スクリプトを利用している場合、Java のシステムプロパテイをスクリプトに直接指定することができます。

<!--
## Specifying the HTTP server address and port
-->
## HTTP サーバーのアドレスとポートを指定する

<!--
You can provide both HTTP port and address. The default is to listen on port `9000` at the `0.0.0.0` address (all addresses).
-->
HTTP ポートとアドレスの両方を指定することができます。デフォルトはポート `9000` 、アドレス `0.0.0.0` （全てのアドレス）です。

```
$ /path/to/bin/<project-name> -Dhttp.port=1234 -Dhttp.address=127.0.0.1
```

<!--
> Note that these configuration are only provided for the default embedded Netty server.
-->
> この設定はデフォルトの組み込み Netty サーバだけが利用します。

<!--
## Specifying additional JVM arguments
-->
## JVM の起動オプションを指定する

<!--
You can specify any JVM arguments to the `start` script. Otherwise the default JVM settings will be used:
-->
`start` スクリプトに JVM の起動オプションを指定することができます。指定しなかった場合は、 JVM のデフォルト設定が利用されます。

```
$ /path/to/bin/<project-name> -J-Xms128M -J-Xmx512m -J-server
```

<!--
As a convenience you can also set memory min, max, permgen and the reserved code cache size in one go; a formula is used to
determine these values given the supplied parameter (which represents maximum memory):
-->
便宜上、メモリの最小値、最大値、パーマネント領域や ReservedCodeCacheSize を一度に設定することもできますが、これらの値を (メモリの最大値を表現する) 与えられた引数で決定する公式も使われます:

```
$ /path/to/bin/<project-name> -mem 512 -J-server
```

<!--
## Specifying alternative configuration file
-->
## 代替の設定ファイルを指定する

<!--
The default is to load the `application.conf` file from the classpath. You can specify an alternative configuration file if needed:
-->
デフォルトで読み込まれる設定ファイルはクラスパス上の `application.conf` です。必要に応じて、別の設定ファイルを指定することができます。

<!--
### Using `-Dconfig.resource`
-->
### `-Dconfig.resource` を使う

<!--
It will search for an alternative configuration file in the application classpath (you usually provide these alternative configuration files into your application `conf/` directory before packaging). Play will look into `conf/` so you don't have to add `conf/`.
-->
アプリケーションのクラスパスで代替の設定ファイルを検索します。（普通はこのような代替の設定ファイルを、パッケージング前にアプリケーションの `conf/` ディレクトリに入れておくとよいでしょう。） Play は `conf/` ディレクトリを検索するので `conf/` を加える必要はありません。

```
$ /path/to/bin/<project-name> -Dconfig.resource=prod.conf
```

<!--
### Using `-Dconfig.file`
-->
### `-Dconfig.file` を使う

<!--
You can also specify another local configuration file not packaged into the application artifacts:
-->
アプリケーションのバイナリにパッケージングされていない、ファイルシステム上の設定ファイルを指定することができます。

```
$ /path/to/bin/<project-name> -Dconfig.file=/opt/conf/prod.conf
```

<!--
### Using `-Dconfig.url`
-->
### `-Dconfig.url` を使う

<!--
You can also specify a configuration file to be loaded from any URL:
-->
任意の URL を指定して、設定ファイルをロードすることができます。

```
$ /path/to/bin/<project-name> -Dconfig.url=http://conf.mycompany.com/conf/prod.conf
```

<!--
> Note that you can always reference the original configuration file in a new `prod.conf` file using the `include` directive, such as:
> -->
> このとき、`prod.conf` に次のように `include` 命令を記述すると、元の設定ファイルを参照できます。
> 
> ```
> include "application.conf"
> 
> key.to.override=blah
> ```

<!--
## Overriding specific configuration keys
-->
## 特定の設定キーを上書きする

<!--
Sometimes you don't want to specify another complete configuration file, but just override a bunch of specific keys. You can do that by specifying then as Java System properties:
-->
設定ファイル全体を置き換えたいのではなく、いくつかの設定値キーを上書きできればよい、ということもあるでしょう。その場合は、 Java のシステムプロパティを利用して次のようにします。

```
$ /path/to/bin/<project-name> -Dapplication.secret=verysecretkey -Ddb.default.password=toto
```

<!--
## Using environment variables
-->
## 環境変数を使う

<!--
You can also reference environment variables from your `application.conf` file:
-->
`application.conf` から環境変数を参照することができます。

```
my.key = defaultvalue
my.key = ${?MY_KEY_ENV}
```

<!--
Here, the override field `my.key = ${?MY_KEY_ENV}` simply vanishes if there's no value for `MY_KEY_ENV`, but if you set an environment variable `MY_KEY_ENV` for example, it would be used.
-->
フィールドを上書きする `my.key = ${?MY_KEY_ENV}` という記述をしました。これは、`MY_KEY_ENV` という値がない場合は単に無かった事にされます。しかし、`MY_KEY_ENV` という環境変数が設定されている場合は、環境変数の方が利用されます。

<!--
## Changing the logback configuration file
-->
## logback の設定ファイルを変更する

<!--
### Bundling a custom logback configuration file with your application
-->
### カスタムの logback 設定ファイルをアプリケーションにバンドルする

<!--
Create an alternative logback config file called `application-logger.xml` and copy that to `<app>/conf`
-->
`application-logger.xml` という代理の logback 設定ファイルを作成し `<app>/conf` にコピーします。

<!--
You can also specify another logback configuration file via a System property. Please note that if the configuration file is not specified then play will use the default `logger.xml` that comes with play in the production mode. This means that any log level settings in application.conf file will be overridden. As a good practice always specify your `application-logger.xml`.
-->
システムプロパティを使って別の logback 設定ファイルを指定することができます。設定ファイルが指定されなかった場合、play は本番モードにおいてデフォルトの `logger.xml` を使用することを覚えておいてください。これは application.conf にて設定したあらゆるログレベルが上書きされることを意味しています。常に自身の `application-logger.xml` を指定するのが良いプラクティスです。

<!--
### Using `-Dlogger.resource`
-->
### `-Dlogger.resource` を使う

<!--
Specify another logback configuration file to be loaded from the classpath:
-->
別の logback 設定ファイルをクラスパスから読み込みことができます。

```
$ /path/to/bin/<project-name> -Dlogger.resource=conf/prod-logger.xml
```

<!--
### Using `-Dlogger.file`
-->
### `-Dlogger.file` を使う

<!--
Specify another logback configuration file to be loaded from the file system:
-->
別の logback 設定ファイルをファイルシステムから読み込むことができます。

```
$ /path/to/bin/<project-name> -Dlogger.file=/opt/prod/prod-logger.xml
```

<!--
### Using `-Dlogger.url`
-->
### `-Dlogger.url` を使う

<!--
Specify another logback configuration file to be loaded from an URL:
-->
別の logback 設定ファイルを URL から読み込むことができます。

```
$ /path/to/bin/<project-name> -Dlogger.url=http://conf.mycompany.com/logger.xml
```

<!--
## Changing the path of RUNNING_PID
-->
## RUNNING_PID のパスを変更する

<!--
It is possible to change the path to the file that contains the process id of the started application. Normally this file is placed in the root directory of your play project, however it is advised that you put it somewhere where it will be automatically cleared on restart, such as `/var/run`:
-->
起動したアプリケーションのプロセス id を含むファイルのパスを変更することができます。通常、このファイルは play プロジェクトのルートディレクトリに配置されますが、`/var/run` のような再起動時に自動的にクリアされる場所に配置するのが賢明です:

```
$ /path/to/bin/<project-name> -Dpidfile.path=/var/run/play.pid
```

<!--
> Make sure that the directory exists and that the user that runs the Play application has write permission for it.
-->
> このディレクトリが存在し、Play アプリケーションを実行しているユーザーが書き込み権限を持っていることを確認してください。

<!--
Using this file, you can stop your application using the `kill` command, for example:
-->
このファイルを使うことで、例えば以下のようにして `kill` コマンドを使ってアプリケーションを停止することができます:

```
$ kill $(cat /var/run/play.pid)
```

<!--
> **Next:** [[Setting up a front end HTTP server|HTTPServer]]
-->
> **Next:** [[フロントエンド HTTP サーバの設定|HTTPServer]]